# gotgraph

./: .gitignore  Cargo.toml  README.md
benchmark/: Cargo.toml  README.md  lib.rs  main.rs  plot_results.rs  simple_plot.rs
src/: graph.rs  lib.rs  vec_graph.rs
src/algo/: mod.rs  tarjan.rs
src/graph/: basic.rs  context.rs  remove.rs  update.rs
tests/: comprehensive_api_tests.rs  nested_scoped_mut_bug_demo.rs  tarjan_comprehensive_test.rs  tarjan_tests.rs  vec_graph.rs  vec_graph_basic.rs
tests/compile_fail/: cross_scope_node_tags.rs  cross_scope_node_tags.stderr  edge_map_escape_scope.rs  edge_map_escape_scope.stderr  edge_tag_escape_scope.rs  edge_tag_escape_scope.stderr  map_with_wrong_scope_tags.rs  map_with_wrong_scope_tags.stderr  nested_scope_tag_misuse.rs  nested_scope_tag_misuse.stderr  nested_scoped_mut_clear_bug.rs  nested_scoped_mut_clear_bug.stderr  node_map_escape_scope.rs  node_map_escape_scope.stderr  node_tag_escape_scope.rs  node_tag_escape_scope.stderr  wrong_graph_edge_operation.rs  wrong_graph_edge_operation.stderr
