[package]
name = "gotgraph-benchmark"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false

[dependencies]
gotgraph = { path = ".." }
petgraph = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "graph_benchmark"
path = "main.rs"
harness = false