[package]
name = "gotgraph-benchmark"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
publish = false

[lib]
name = "gotgraph_benchmark"
path = "lib.rs"

[dependencies]
gotgraph = { path = ".." }
petgraph = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
plotters = { version = "0.3", default-features = false, features = [
  "svg_backend",
  "line_series",
] }
pathfinding = "4.0"
graphlib = "0.6"

[[bench]]
name = "graph_benchmark"
path = "main.rs"
harness = false

[[bin]]
name = "plot_results"
path = "plot_results.rs"

[[bin]]
name = "simple_plot"
path = "simple_plot.rs"

[[bin]]
name = "assembly_benchmark"
path = "assembly_benchmark.rs"

[[bin]]
name = "core_ops_analysis"
path = "core_ops_analysis.rs"
